force-app/main/default/objects/Account/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>TextArea</type>
</CustomField>