force-app/main/default/objects/Account/fields/Client_Testimonials__c.field-meta.xml
<CustomField>
    <fullName>Client_Testimonials__c</fullName>
    <label>Client Testimonials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>