force-app/main/default/objects/Account/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact Information)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>