force-app/main/default/objects/Account/fields/Emergency_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Information__c</fullName>
    <label>Emergency Contact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>