force-app/main/default/objects/Account/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <displayFormat>Emp ID - {0000}</displayFormat>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>