force-app/main/default/objects/Account/fields/Family_Composition__c.field-meta.xml
<CustomField>
    <fullName>Family_Composition__c</fullName>
    <label>Family Composition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuclear</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Blended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>