force-app/main/default/objects/Account/fields/Family_Income__c.field-meta.xml
<CustomField>
    <fullName>Family_Income__c</fullName>
    <label>Family Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>