force-app/main/default/objects/Account/fields/First_Aid_Certification__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Aid Certification</label>
    <type>Checkbox</type>
</CustomField>