force-app/main/default/objects/Account/fields/Group_Classes_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Group_Classes_Conducted__c</fullName>
    <label>Group Classes Conducted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>