force-app/main/default/objects/Account/fields/Last_Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Training_Session__c</fullName>
    <label>Last Training Session</label>
    <type>Date</type>
</CustomField>