force-app/main/default/objects/Account/fields/Nutrition_Certification__c.field-meta.xml
<CustomField>
    <fullName>Nutrition_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nutrition Certification</label>
    <type>Checkbox</type>
</CustomField>