force-app/main/default/objects/Account/fields/Part_Time_Status__c.field-meta.xml
<CustomField>
    <fullName>Part_Time_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part-Time Status</label>
    <type>Checkbox</type>
</CustomField>