force-app/main/default/objects/Account/fields/Personal_Training_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Personal_Training_Sessions__c</fullName>
    <label>Personal Training Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>