force-app/main/default/objects/Account/fields/Relationship_to_Child__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Child__c</fullName>
    <label>Relationship to Child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>