force-app/main/default/objects/Account/fields/Social_Media_Links__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Links__c</fullName>
    <label>Social Media Links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>