force-app/main/default/objects/Account/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strength Training</fullName>
            </value>
            <value>
                <fullName>Cardio Training</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>Pilates</fullName>
            </value>
            <value>
                <fullName>Nutrition Coaching</fullName>
            </value>
            <value>
                <fullName>Group Fitness</fullName>
            </value>
            <value>
                <fullName>Weight Loss</fullName>
            </value>
            <value>
                <fullName>Sports Conditioning</fullName>
            </value>
            <value>
                <fullName>Functional Training</fullName>
            </value>
            <value>
                <fullName>Dance Fitness</fullName>
            </value>
            <value>
                <fullName>Senior Fitness</fullName>
            </value>
            <value>
                <fullName>Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Kettlebell Training</fullName>
            </value>
            <value>
                <fullName>HIIT (High-Intensity Interval Training)</fullName>
            </value>
            <value>
                <fullName>Bodybuilding</fullName>
            </value>
            <value>
                <fullName>Mindfulness and Meditation</fullName>
            </value>
            <value>
                <fullName>Mobility and Flexibility</fullName>
            </value>
            <value>
                <fullName>Personal Training</fullName>
            </value>
            <value>
                <fullName>Kids Fitness</fullName>
            </value>
            <value>
                <fullName>Special Needs Fitness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>