force-app/main/default/objects/Account/fields/Specific_Subject__c.field-meta.xml
<CustomField>
    <fullName>Specific_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specific Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>