force-app/main/default/objects/Account/fields/Workshops_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Workshops_Conducted__c</fullName>
    <label>Workshops Conducted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>