force-app/main/default/objects/Account/recordTypes/Alumni_Account.recordType-meta.xml
<RecordType>
    <fullName>Alumni_Account</fullName>
    <active>true</active>
    <label>Alumni Account</label>
</RecordType>