force-app/main/default/objects/Account/recordTypes/Chairman_Account.recordType-meta.xml
<RecordType>
    <fullName>Chairman_Account</fullName>
    <active>true</active>
    <label>Chairman Account</label>
</RecordType>