force-app/main/default/objects/Account/recordTypes/Faculty_Account.recordType-meta.xml
<RecordType>
    <fullName>Faculty_Account</fullName>
    <active>true</active>
    <label>Faculty Account</label>
</RecordType>