force-app/main/default/objects/Account/recordTypes/Fitness_Instructor.recordType-meta.xml
<RecordType>
    <fullName>Fitness_Instructor</fullName>
    <active>true</active>
    <label>Fitness Instructor</label>
</RecordType>