force-app/main/default/objects/Account/recordTypes/Registrar_Account.recordType-meta.xml
<RecordType>
    <fullName>Registrar_Account</fullName>
    <active>false</active>
    <label>Registrar Account</label>
</RecordType>